--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -35,6 +35,7 @@ nav > a {
   text-decoration: none;
   font-size: 20px;
   line-height: 30px;
+  cursor: pointer;
 }
 nav > a:hover {
   background-color: black;
@@ -47,6 +48,38 @@ main {
   margin: 80px 0 80px 200px;
   padding: 20px;
 }
-.movies_container {
+.news_container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.news_card {
+  width: calc((100% - 40px) / 3);
+  margin: 0 0 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 5px gray;
+  overflow: hidden;
+  position: relative;
+}
+.card_image {
+  width: 100%;
+  height: calc((100vw - 280px) / 3);
+}
+.card_title {
+  margin: 10px 10px 5px;
+  font-size: 18px;
+}
+.card_details {
+  margin: 0 10px 10px;
+  font-size: 12px;
+}
+.card_content {
+  margin: 0 10px 30px;
+  text-align: justify;
+}
+.article_link {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 14px;
 }
