--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -51,15 +51,17 @@ main {
 .news_container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 }
 .news_card {
   width: calc((100% - 40px) / 3);
-  margin: 0 0 20px;
+  margin: 0 20px 20px 0;
   border-radius: 10px;
   box-shadow: 0 0 5px gray;
   overflow: hidden;
   position: relative;
+}
+.news_card:nth-child(3n) {
+  margin-right: 0;
 }
 .card_image {
   width: 100%;
