--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -76,12 +76,15 @@ main {
   font-size: 12px;
 }
 .card_content {
+  font-size: 14px;
   margin: 0 10px 30px;
-  text-align: justify;
+}
+.card_description {
+  font-weight: bold;
 }
 .article_link {
   position: absolute;
   bottom: 10px;
   right: 10px;
-  font-size: 14px;
+  font-size: 12px;
 }
